fixing some css bugs

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
         </span>
         <div class="text_part">
           <h2 class="card_title">How did we do?</h2>
-          <p class="card_content_text">
+          <p class="card_content_text p-2">
             Please let us know how we did with your support request. All
             feedback is appreciated to help us improve our offering!
           </p>
