file refactoring for deployment

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <section class="rating_state_container card_style">
       <div class="rating_state_text">
         <span class="star">
-          <img src="../images/icon-star.svg" alt="star" />
+          <img src="./images/icon-star.svg" alt="star" />
         </span>
         <div class="text_part">
           <h2 class="card_title">How did we do?</h2>
@@ -47,7 +47,7 @@
     <section class="thank_you_state_container card_style">
       <div class="thank_header">
         <span class="thanks_image">
-          <img src="../images/illustration-thank-you.svg" alt="thank_you" />
+          <img src="./images/illustration-thank-you.svg" alt="thank_you" />
         </span>
 
         <div class="thank_banner">
